# chatbot

./: .gitignore  Cargo.toml  Dockerfile  README.md  test.sh
src/client/: main.rs
src/server/: cache.rs  commands.rs  handler.rs  main.rs  openai.rs
