[package]
name = "chatbot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
http = "0.2.8"
hyper = { version = "0.14.20", features = ["full"] }
hyper-tls = "0.5.0"
tokio = { version = "1.28.2", features = ["full"] }
serde = "1.0.145"
serde_derive = "1.0.145"
serde_json = "1.0.85"
simple_openai = { git = "https://github.com/laonger/simple_openai.git", version = "0.1.0" }
